--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
+            <!-- scope: к чему применять -->
+
             <!--<scope>test</scope>-->
         </dependency>
-    
+
     </dependencies>
 
 </project>
