--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,16 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
             <!-- scope: к чему применять -->
+            <scope>test</scope>
+        </dependency>
 
-            <!--<scope>test</scope>-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>4.0.7.RELEASE</version>
+            <!--&lt;!&ndash; RELEASE - последний RELEASE &ndash;&gt;-->
+            <!--&lt;!&ndash; LATEST - любой последний &ndash;&gt;-->
         </dependency>
 
     </dependencies>
-
 </project>
